# detectron2

./: pyproject.toml  setup.py
