[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch",              # required for cpp_extension
]
build-backend = "setuptools.build_meta"

[project]
name = "detectron2"
version = "0.0.0"  # will be overridden by get_version() in setup.py
description = "Detectron2 is FAIR's next-generation research platform for object detection and segmentation."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Apache-2.0" }

authors = [
    { name = "FAIR" }
]

urls = { "Homepage" = "https://github.com/facebookresearch/detectron2" }

dependencies = [
    "Pillow>=7.1",
    "matplotlib",
    "pycocotools>=2.0.2",
    "termcolor>=1.1",
    "yacs>=0.1.8",
    "tabulate",
    "cloudpickle",
    "tqdm>4.29.0",
    "tensorboard",
    "fvcore>=0.1.5,<0.1.6",
    "iopath>=0.1.7,<0.1.10",
    "dataclasses; python_version<'3.7'",
    "omegaconf>=2.1,<2.4",
    "hydra-core>=1.1",
    "black",
    "packaging",
]

[project.optional-dependencies]
all = [
    "fairscale",
    "timm",
    "scipy>1.5.1",
    "shapely",
    "pygments>=2.2",
    "psutil",
    "panopticapi @ https://github.com/cocodataset/panopticapi/archive/master.zip",
]

dev = [
    "flake8==3.8.1",
    "isort==4.3.21",
    "flake8-bugbear",
    "flake8-comprehensions",
    "black==22.3.0",
]

[tool.setuptools]
# dynamic packages — still need setup.py logic for PROJECTS + configs symlink
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["configs", "tests*"]
